# afya-apex-companion

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  context.md  docker-compose.yml  env-example.md  main.py  prescribe-meds.js  pyproject.toml  requirements.txt  run.py
app/: dependencies.py  main.py
app/auth/: __init__.py  contracts.py  exceptions.py  schemas.py  service.py
app/bot/: bot.py  handlers.py  router.py
app/config/: settings.py
app/database/: __init__.py  crud.py  dependencies.py  exceptions.py  migrations.py  prisma.py
app/database/repositories/: __init__.py  base.py  session.py  user.py
app/emr_client/: browser_helpers.py  browser_manager.py  client.py  exceptions.py  live_page_registry.py  onclick_parser.py  search_manager.py  session_manager.py  ward_manager.py
app/emr_client/pages/: generic-drugs.json  login_page.py  prescribe_page.py  progress_notes_page.py  search_page.py  wardmanagement_page.py  xsearch_page.py  xward_management.py
docs/: implementation.md
prisma/: schema.prisma
prisma/migrations/20260708041904_add_emr_username/: migration.sql
tests/: test_auth.py  test_bot.py  test_database.py  test_emrrepo.py  test_login.py  test_userrepo.py
