[project]
name = "afya-apex-companion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "playwright>=1.61.0",
    "prisma>=0.15.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
]
[tool.fastapi]
entrypoint = "app.main:app"
